--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,3 +51,13 @@
   height: 100%;
   margin-bottom: -3px;
 }
+
+.header-top{
+ 
+  display: flex;
+  background-color: #F5F5F5;
+  color: #333333;
+  justify-content: right;
+  gap: 30px;
+  
+}
